# avm-fritzbox-base32-rs

./: Cargo.toml  LICENCE.md  README.md
.github/workflows/: actions.yml
src/: common.rs  decode.rs  encode.rs  lib.rs
